# octoplex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
extra/docker/: entrypoint.sh
playground/: Cargo.toml
playground/src/: main.rs
src/: api.rs  http_client.rs  http_server.rs  main.rs  multiplexer.rs
tests/: multiplexer_suite.rs
tests/common/: api.rs  mod.rs
