[package]
name = "octoplex"
version = "0.1.1"
authors = ["Adrian Gligor <adrian@gligor.at>"]
edition = "2018"

#[workspace]
#members = [
#    "playground"
#]

[dependencies]
tokio = { version = "^1.20", features = ["full", "time"] }
futures = "^0.3"
hyper = { version = "^0.14", features = ["runtime", "server", "stream"] }
hyper-tls = "^0.5"
native-tls = "^0.2"
http = "^0.2"
url = "^2.1"
bytes = { version = "^1.2", features = ["std"] }

strum = "^0.24"
strum_macros = "^0.24"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_millis = "^0.1"

humantime = "^2.0"
anyhow = "^1.0"
thiserror = "^1.0"
pretty_env_logger = "^0.4"

async-trait = "^0.1"

[dev-dependencies]
mockall = "^0.11"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
