[package]
name = "octoplex-playground"
version = "0.1.0"
authors = ["Adrian Gligor <adrian@gligor.at>"]
edition = "2018"

[dependencies]
tokio = { version = "^0.2", features = ["full", "time"] }
futures = "^0.3"
hyper = { version = "^0.13", features = ["runtime", "stream"] }
hyper-tls = "^0.4"
native-tls = "^0.2"
http = "^0.2"
url = "^2.1"
bytes = "^0.5"

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

anyhow = "^1.0"
thiserror = "^1.0"
pretty_env_logger = "^0.3"
